# samplerlab

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  run_benchmarks.py
src/samplerlab/: __init__.py  __main__.py  _executor.py  _model_registry.py  _models.py  _sampler_registry.py  _samplers.py  _stan_models.py
